Add delete for card
